Re-enable ArchiveProtectionDomains after JEP 483 merge